# AutoComplete_Editor

./: README.md  a.out
Report/: report.tex
code/: BiTrigramModel.cpp  BiTrigramModel.h  BigramModel.cpp  Trie.h  main.cpp
code/backend/: BigramModel.h  CMakeLists.txt  Trie.cpp  a.out  main.cpp
code/backend/input/: resume_10.txt  resume_100.txt  resume_1000.txt  resume_1001.txt  resume_1002.txt  resume_1004.txt  resume_1006.txt  resume_1008.txt  resume_1009.txt  resume_101.txt  resume_1012.txt  resume_1015.txt  resume_1016.txt  resume_1017.txt  resume_1018.txt  resume_1019.txt  resume_102.txt  resume_1020.txt  resume_1022.txt  resume_1023.txt  resume_1024.txt  resume_1027.txt  resume_1028.txt  resume_1029.txt  resume_103.txt  resume_1031.txt  resume_1033.txt  resume_1035.txt  resume_1037.txt  resume_1038.txt  resume_1039.txt  resume_104.txt  resume_1042.txt  resume_1044.txt  resume_1045.txt  resume_1048.txt  resume_1049.txt  resume_105.txt  resume_1050.txt  resume_1051.txt  (+584 more)
code/backend/users/: msaad.txt  saad@gmail.com.txt
input/: resume_0.txt  resume_1.txt  resume_1003.txt  resume_1005.txt  resume_1007.txt  resume_1010.txt  resume_1011.txt  resume_1013.txt  resume_1014.txt  resume_1021.txt  resume_1025.txt  resume_1026.txt  resume_1030.txt  resume_1032.txt  resume_1034.txt  resume_1036.txt  resume_1040.txt  resume_1041.txt  resume_1043.txt  resume_1046.txt  resume_1047.txt  resume_1052.txt  resume_1054.txt  resume_1057.txt  resume_106.txt  resume_1062.txt  resume_1064.txt  resume_1065.txt  resume_1066.txt  resume_1067.txt  resume_1068.txt  resume_1072.txt  (+585 more)
(+814 files in other folders)
